Import of SANTERI/Tkx-SplashScreen-0.11 from CPAN.
gitpan-cpan-distribution: Tkx-SplashScreen
gitpan-cpan-version:      0.11
gitpan-cpan-path:         SANTERI/Tkx-SplashScreen-0.11.tar.gz
gitpan-cpan-author:       SANTERI
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Tkx-SplashScreen
-version:            v0.1
+version:            0.11
 abstract:           splashscreen megawidget for Tkx.
 author:
     - Alexander Nusov <santeri@cpan.org>
