Import of SANTERI/Tkx-SplashScreen-v0.1.2 from CPAN.
gitpan-cpan-distribution: Tkx-SplashScreen
gitpan-cpan-version:      v0.1.2
gitpan-cpan-path:         SANTERI/Tkx-SplashScreen-v0.1.2.tar.gz
gitpan-cpan-author:       SANTERI
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Tkx-SplashScreen
-version:            0.1.2
+version:            v0.1.2
 abstract:           splashscreen megawidget for Tkx.
 author:
     - Alexander Nusov <santeri@cpan.org>
