--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Tkx-SplashScreen
-version:            0.14
+version:            0.15
 abstract:           splashscreen megawidget for Tkx.
 author:
     - Alexander Nusov <cpan@sancode.net>
@@ -12,6 +12,7 @@ build_requires:
     ExtUtils::MakeMaker:  0
 requires:
     Test::More:  0
+    Tkx:         0
 no_index:
     directory:
         - t
