Import of SANTERI/Tkx-SplashScreen-0.16 from CPAN.
gitpan-cpan-distribution: Tkx-SplashScreen
gitpan-cpan-version:      0.16
gitpan-cpan-path:         SANTERI/Tkx-SplashScreen-0.16.tar.gz
gitpan-cpan-author:       SANTERI
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,9 @@
 --- #YAML:1.0
 name:               Tkx-SplashScreen
-version:            0.15
+version:            0.16
 abstract:           splashscreen megawidget for Tkx.
 author:
-    - Alexander Nusov <cpan@sancode.net>
+    - Alexander Nusov <alexander.nusov+cpan@gmail.com>
 license:            perl
 distribution_type:  module
 configure_requires:
@@ -17,7 +17,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.55_02
+generated_by:       ExtUtils::MakeMaker version 6.56
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
